add graph image

--- a/Assignment-2.ipynb
+++ b/Assignment-2.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "Let’s start by taking a graph.\n",
     "\n",
-    "![graph image](/Users/leon/Downloads/graph_1.png)\n",
+    "![graph image](graph_1.png)\n",
     "\n",
     "1.\tAccording to the algorithm, we need to divide the graph into two parts, S and V-S, where the number of vertices in each part differs by at most 1. Let's divide it as follows: S = {A, B, C, D}    V-S = {E, F, G}\n",
     "2.\tNow, we need to recursively find the minimum spanning trees M1 and M2 in S and V-S respectively.\n",
